tests/corpus/negatives/static-exec.ts
import { exec } from "node:child_process";

exec("echo safe");
